tests/paczka2/big_fuzzy/34464889.err
Error in line 6: A446 S608 5,0
Error in line 11: he43ac A98 41,8
Error in line 31: ABqi2iJeH A446 96,9
Error in line 34: ABqi2iJeH S608 71,5
Error in line 39: FFSs S369 195,0
Error in line 40: FFSs A98 42,2
Error in line 60: FFSs S608 24,8
Error in line 63: A446 A98 35,9
Error in line 69: A446 S369 0,3
Error in line 65: he43ac S608 125,3
Error in line 71: xINRQczLH A446 26,3
Error in line 82: ABqi2iJeH A446 22,5
Error in line 90: ABqi2iJeH A98 54,4
Error in line 99: FFSs A446 26,7
Error in line 98: xINRQczLH A98 88,3
Error in line 102: he43ac S369 74,4
Error in line 108: he43ac S^08 92,4
Error in line 117: ABqi2iJeH A446 86,9
Error in line 101: xINRQczLH A446 65,6
Error in line 121: xINRQczLH S608 7,9
Error in line 118: ABqi2iJeH A98 21,2
Error in line 123: xINRQczLH A98 26,2
Error in line 139: wyFaxMl A98 28,3
Error in line 138: s3fV A98 59,2
Error in line 131: he43ac S608 21,0
Error in line 166: ABqi2iJeH A446 4,8
Error in line 171: A446 S369 186,74
Error in line 158: A446 S369 53,1
Error in line 178: ABqi2iJeH S608 73,3
Error in line 181: ABqi2iJeH A98 203,97
Error in line 180: ABqi2iJeH A98 65,5
Error in line 196: s3fV S608 37,7
Error in line 203: FFSs A446 14,5
Error in line 199: he43ac S369 52,1
Error in line 211: ABqi2iJeH A446 22,4
Error in line 226: A446 A446 99,4
Error in line 229: he43ac A446 28,9
Error in line 231: ABqi2iJeH A98 64,5
Error in line 238: ABqi2iJeH S369 73,4
Error in line 240: ABqi2iJeH A98 89,9
